# zix

./: .clang-format  .clang-tidy  .clant.json  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  INSTALL.md  NEWS  README.md  meson.build  meson_options.txt  plot.py  wscript
.reuse/: dep5
benchmark/: .clang-tidy  bench.h  dict_bench.c  meson.build  tree_bench.c  warnings.h
doc/: .clang-tidy  Doxyfile.in  allocation.rst  conf.py  conf.py.in  error_handling.rst  index.rst  meson.build  overview_code.c  reference.doxygen.in  string_views.rst  summary.rst  using_zix.rst
doc/_static/: custom.css
doc/api/: meson.build
doc/html/: meson.build
doc/singlehtml/: meson.build
doc/xml/: meson.build
include/: .clang-tidy
include/zix/: allocator.h  attributes.h  bitset.h  btree.h  bump_allocator.h  common.h  digest.h  environment.h  filesystem.h  function_types.h  hash.h  path.h  rank_tree.h  ring.h  sem.h  sorted_array.h  status.h  strindex.h  string_view.h  thread.h  tree.h  warnings.h  zix.h
meson/suppressions/: meson.build
meson/warnings/: meson.build
scripts/: benchmark.py  dox_to_sphinx.py  meson.build  plot.py
src/: .clang-tidy  allocator.c  bitset.c  btree.c  bump_allocator.c  digest.c  errno_status.c  errno_status.h  fat_patree.c  filesystem.c  hash.c  index_range.h  path.c  path_iter.h  patree.c  qualifiers.h  rank_tree.c  ring.c  sem.c  sorted_array.c  status.c  strindex.c  string_view.c  system.c  system.h  thread.c  tree.c  tree_debug.h  zix_config.h
src/darwin/: sem_darwin.c
src/posix/: environment_posix.c  filesystem_posix.c  sem_posix.c  system_posix.c  thread_posix.c
src/win32/: .clang-tidy  environment_win32.c  filesystem_win32.c  sem_win32.c  system_win32.c  thread_win32.c  win32_util.c  win32_util.h
subprojects/: sphinxygen.wrap
test/: .clang-tidy  allocator_test.c  ampatree_test.c  bench.h  bitset_test.c  btree_test.c  dict_bench.c  digest_test.c  ensure.h  failing_allocator.c  failing_allocator.h  hash_test.c  inline_test.c  meson.build  patree_bench.c  patree_test.c  ring_test.c  sem_test.c  sorted_array_test.c  strerror_test.c  strindex_test.c  test_allocator.c  test_args.h  test_bitset.c  test_btree.c  test_data.h  test_digest.c  test_environment.c  test_filesystem.c  test_hash.c  test_malloc.c  test_malloc.h  test_path.c  test_rank_tree.c  test_ring.c  test_sem.c  test_status.c  test_string_view.c  test_thread.c  test_tree.c  (+3 more)
test/cpp/: .clang-tidy  test_headers_cpp.cpp  test_path_std.cpp
test/headers/: .clang-tidy  test_headers.c
test/lint/: meson.build
zix/: ampatree.c  ampatree.h  bitset.c  bitset.h  btree.c  btree.h  chunk.c  chunk.h  common.h  digest.c  digest.h  fat_patree.c  fat_patree.h  hash.c  hash.h  patree.c  patree.h  ring.c  ring.h  sem.h  sorted_array.c  sorted_array.h  strindex.c  strindex.h  thread.h  tree.c  tree.h  tree_debug.h  trie.c  trie.h  trie_util.h  zix.h
